--- a/WebPA.html
+++ b/WebPA.html
@@ -25,7 +25,7 @@
     </form>
 
     <!-- ボタンの衝突を防ぐためにform外へ -->
-    <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成</button>
+    <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成</button><br>
     <input type="text" id="FormURL" readonly><br>
 
     <script>
