--- a/WebPA.html
+++ b/WebPA.html
@@ -25,7 +25,7 @@
     </form>
 
     <!-- ボタンの衝突を防ぐためにform外へ -->
-    <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成</button><br>
+    <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成 ver1.0</button><br>
     <input type="text" id="FormURL" readonly><br>
 
     <script>
@@ -48,7 +48,7 @@
         // 事前入力済みFormsURL自動生成
         function GenerateFormsURL(){
             
-            const JanCode = document.getElementById('Barcode').value.trim();
+            const JanCode = document.getElementById('barcode').value.trim();
 
             // JANコード NULLチェック
             if (!JanCode){
