--- a/WebPA.html
+++ b/WebPA.html
@@ -15,18 +15,11 @@
 
         <button id="startScan" type="button">スキャン開始</button><br><br>
 
-        <label for="name">名前：</label><br>
-        <input type="text" id="name" name="name"><br><br>
-
-        <label for="email">メールアドレス：</label><br>
-        <input type="email" id="email" name="email"><br><br>
-
-        <!-- <button type="submit">送信</button><br><br> -->
     </form>
 
     <!-- ボタンの衝突を防ぐためにform外へ -->
-    <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成</button><br>
-    <input type="text" id="FormURL" readonly><br>
+    <!-- <button type="button" onclick="GenerateFormsURL()">FormsURL 自動作成</button><br> -->
+    <!-- <input type="text" id="FormURL" readonly><br> -->
 
     <script>
 
@@ -39,8 +32,19 @@
 
         codeReader.decodeFromVideoDevice(null, videoElement, (result, err) => {
                 if (result) {
-                 resultElement.value = result.getText();
-                 codeReader.reset();
+                    resultElement.value = result.getText();
+                    codeReader.reset();
+
+                    // ベースURL・質問ID・抽出した商品コード・エンコード後の商品コードを取得
+                    const BaseURL = "https://forms.office.com/Pages/ResponsePage.aspx?id=OEtMPzPYtUem4Ic11TlGaIfYkjmu2fFBotYoTh_Pz2JURUMyQjJHMks1Nk5RTEFCVVNLTVhMS1FHVS4u";
+                    const QuestionId = "rcb527b911d8541b6bd298ba5d0438b68";
+                    const JsonValue = JSON.stringify([resultElement.value]);
+                    const Encoded = encodeURIComponent(JsonValue); 
+
+                    // 事前入力済みのForms URLを作成
+                    const FullURL = `${BaseURL}&${QuestionId}=${Encoded}`;
+
+                    window.open(FullURL)
                 }
             });
         });
@@ -48,6 +52,7 @@
         // 事前入力済みFormsURL自動生成
         function GenerateFormsURL(){
             
+            // 抽出した商品コードを格納
             const JanCode = document.getElementById('barcode').value.trim();
 
             // JANコード NULLチェック
@@ -56,47 +61,18 @@
                 return;
             }
 
+            // ベースURL・質問ID・抽出した商品コード・エンコード後の商品コードを取得
             const BaseURL = "https://forms.office.com/Pages/ResponsePage.aspx?id=OEtMPzPYtUem4Ic11TlGaIfYkjmu2fFBotYoTh_Pz2JURUMyQjJHMks1Nk5RTEFCVVNLTVhMS1FHVS4u";
             const QuestionId = "rcb527b911d8541b6bd298ba5d0438b68";
             const JsonValue = JSON.stringify([JanCode]);
             const Encoded = encodeURIComponent(JsonValue);
 
+            // 事前入力済みのForms URLを作成
             const FullURL = `${BaseURL}&${QuestionId}=${Encoded}`;
 
+            // FormsURLに値を格納
             document.getElementById('FormURL').value = FullURL;
         }
-
-        // Power Automate 連携
-        document.getElementById('myForm').addEventListener('submit', function(e) 
-        {
-            e.preventDefault();
-
-            const data = {
-                name: document.getElementById('name').value,
-                email: document.getElementById('email').value,
-                JANCode: document.getElementById('barcode').value
-            };
-
-            fetch('https://prod-24.japaneast.logic.azure.com:443/workflows/b55f4ea8c2694f989eaac8479b5f5c71/triggers/manual/paths/invoke?api-version=2016-06-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=wCJvp7RN0v5O1mfDJ1yo6CqSdHryzLhkIOIO4H1Vjvw', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => {
-                if(response.ok) {
-                    alert('送信成功');
-                }
-                else
-                {
-                    alert('送信失敗');
-                }
-            })
-            .catch(error => {
-                console.error('エラー：', error);
-            });
-        });
     </script>
 </body>
 </html>
