--- a/WebPA.html
+++ b/WebPA.html
@@ -13,7 +13,7 @@
         <label for="barcode">検出したJANコード：</label><br>
         <input type="text" id="barcode" readonly><br><br>
 
-        <button id="startScan" type="button">スキャン開始</button><br><br>
+        <button id="startScan" type="button">スキャン/Forms遷移</button><br><br>
 
     </form>
 
@@ -44,7 +44,7 @@
                     // 事前入力済みのForms URLを作成
                     const FullURL = `${BaseURL}&${QuestionId}=${Encoded}`;
 
-                    window.open(FullURL)
+                    window.open(FullURL);
                 }
             });
         });
