--- a/WebPA.html
+++ b/WebPA.html
@@ -10,8 +10,9 @@
     <form id="myForm">
         <label>バーコードをスキャン：</label><br>
         <video id="video" width="360" height="260" style="border:1px solid black;"></video><br>
-        <label for="barcode">検出したJANコード：</label><br>
-        <input type="text" id="barcode" readonly><br><br>
+        <label>スキャン後に自動でFormsに遷移します</label><br>
+        <!-- <label for="barcode">検出したJANコード：</label><br>
+        <input type="text" id="barcode" readonly><br><br> -->
 
         <button id="startScan" type="button">スキャン/Forms遷移</button><br><br>
 
