--- a/WebPA.html
+++ b/WebPA.html
@@ -2,8 +2,17 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+    content="width=320,
+      height=480,
+      initial-scale=1.0,
+      minimum-scale=1.0,
+      maximum-scale=2.0,
+      user-scalable=yes" />
+    
     <title>フォーム送信テスト</title>
     <script src="https://unpkg.com/@zxing/library@latest/umd/index.min.js"></script>
+
 </head>
 <body>
     <h1>入力フォーム</h1>
